--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <script src="./script.js" defer></script>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="header">
+
+    </div>
+    <div class="sidebar">
+
+    </div>
+    <div class="content">
+      
+    </div>
+  </div>
 </body>
 </html>
