Begin sidebar layout
Create a filter which changes all images to white

--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
 
     </div>
     <div class="sidebar">
-
+      <div class="title">Dashboard</div>
+      <ul class="navigation">
+        <li><img class="home" src="./imgs/home_google.svg" alt="Home">Home</li>
+        <li>Profile</li>
+        <li>Messages</li>
+        <li>History</li>
+        <li>Tasks</li>
+        <li>Communities</li>
+      </ul>
+      <ul class="options">
+        <li>Settings</li>
+        <li>Support</li>
+        <li>Privacy</li>
+      </ul>
     </div>
     <div class="content">
-      
+
     </div>
   </div>
 </body>
