Add icons to sidebar

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
     </div>
     <div class="sidebar">
-      <div class="title">Dashboard</div>
+      <div class="title"><img src="./imgs/dashboard.svg" alt="Dashboard"> Dashboard</div>
       <ul class="navigation">
-        <li><img class="home" src="./imgs/home_google.svg" alt="Home">Home</li>
-        <li>Profile</li>
-        <li>Messages</li>
-        <li>History</li>
-        <li>Tasks</li>
-        <li>Communities</li>
+        <li><img src="./imgs/home.svg" alt="Home">Home</li>
+        <li><img src="./imgs/profile.svg" alt="Profile"> Profile</li>
+        <li><img src="./imgs/messages.svg" alt="Messages"> Messages</li>
+        <li><img src="./imgs/history.svg" alt="History"> History</li>
+        <li><img src="./imgs/tasks.svg" alt="Tasks"> Tasks</li>
+        <li><img src="./imgs/communities.svg" alt="Communities"> Communities</li>
       </ul>
       <ul class="options">
-        <li>Settings</li>
-        <li>Support</li>
-        <li>Privacy</li>
+        <li><img src="./imgs/settings.svg" alt="Settings"> Settings</li>
+        <li><img src="./imgs/support.svg" alt="Support"> Support</li>
+        <li><img src="./imgs/privacy.svg" alt="Privacy"> Privacy</li>
       </ul>
     </div>
     <div class="content">
