Set up sidebar items

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     </div>
     <div class="sidebar">
-      <div class="title"><img src="./imgs/dashboard.svg" alt="Dashboard"> Dashboard</div>
       <ul class="navigation">
-        <li><img src="./imgs/home.svg" alt="Home">Home</li>
-        <li><img src="./imgs/profile.svg" alt="Profile"> Profile</li>
-        <li><img src="./imgs/messages.svg" alt="Messages"> Messages</li>
-        <li><img src="./imgs/history.svg" alt="History"> History</li>
-        <li><img src="./imgs/tasks.svg" alt="Tasks"> Tasks</li>
-        <li><img src="./imgs/communities.svg" alt="Communities"> Communities</li>
+        <div class="title"><img src="./imgs/dashboard.svg" alt="Dashboard"> Dashboard</div>
+        <li><img src="./imgs/home.svg" alt="Home"><p>Home</p></li>
+        <li><img src="./imgs/profile.svg" alt="Profile"><p>Profile</p></li>
+        <li><img src="./imgs/messages.svg" alt="Messages"><p>Messages</p></li>
+        <li><img src="./imgs/history.svg" alt="History"><p>History</p></li>
+        <li><img src="./imgs/tasks.svg" alt="Tasks"><p>Tasks</p></li>
+        <li><img src="./imgs/communities.svg" alt="Communities"><p>Communities</p></li>
       </ul>
       <ul class="options">
         <li><img src="./imgs/settings.svg" alt="Settings"> Settings</li>
