Add all items to header and start style

--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./imgs/favicon.png" type="image/png">
   <script src="./script.js" defer></script>
 </head>
 <body>
   <div class="container">
     <div class="header">
-
+      <div class="search">
+        <label for="searchbar"><img src="./imgs/search.svg" alt="search"></label>
+        <input type="search" name="searchbar" id="searchbar">
+      </div>
+      <div class="profile-icons">
+        <img src="./imgs/notification.svg" alt="Notification">
+        <img src="./imgs/avatar.svg" alt="Avatar">
+        <p>Jevon Fillette</p>
+      </div>
+      <div class="user-info">
+        <img src="./imgs/avatar.svg" alt="Avatar">
+        <p class="welcome">Hi there,</p>
+        <p>Jevon Fillette (@Code4daze)</p>
+      </div>
+      <div class="user-buttons">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
     </div>
     <div class="sidebar">
       <ul class="navigation">
