Style profile-icons

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <input type="search" name="searchbar" id="searchbar">
       </div>
       <div class="profile-icons">
-        <img src="./imgs/notification.svg" alt="Notification">
-        <img src="./imgs/avatar.svg" alt="Avatar">
+        <img id="icon-notify" src="./imgs/notification.svg" alt="Notification">
+        <img id="icon-avatar" src="./imgs/avatar.svg" alt="Avatar">
         <p>Jevon Fillette</p>
       </div>
       <div class="user-info">
-        <img src="./imgs/avatar.svg" alt="Avatar">
+        <img id="user-avatar" src="./imgs/avatar.svg" alt="Avatar">
         <p class="welcome">Hi there,</p>
         <p>Jevon Fillette (@Code4daze)</p>
       </div>
