--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       </div>
       <div class="user-info">
         <img id="user-avatar" src="./imgs/avatar.svg" alt="Avatar">
-        <p class="welcome">Hi there,</p>
-        <p>Jevon Fillette (@Code4daze)</p>
+        <div class="user-intro">
+          <p class="welcome">Hi there,</p>
+          <p class="user-name">Jevon Fillette (@Code4Daze)</p>
+        </div>
       </div>
       <div class="user-buttons">
         <button>New</button>
