Add link to twitter in user info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <img id="user-avatar" src="./imgs/avatar.svg" alt="Avatar">
         <div class="user-intro">
           <p class="welcome">Hi there,</p>
-          <p class="user-name">Jevon Fillette (@Code4Daze)</p>
+          <p class="user-name">Jevon Fillette 
+              <a href="https://twitter.com/Code4Daze" target="_blank">(@Code4Daze)</a></p>
         </div>
       </div>
       <div class="user-buttons">
