Added styling to the header buttons

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <div class="container">
     <div class="header">
-      <div class="search">
+      <form action="" method="post" class="search" autocomplete="off">
         <label for="searchbar"><img src="./imgs/search.svg" alt="search"></label>
         <input type="search" name="searchbar" id="searchbar">
-      </div>
+      </form>
       <div class="profile-icons">
         <img id="icon-notify" src="./imgs/notification.svg" alt="Notification">
         <img id="icon-avatar" src="./imgs/avatar.svg" alt="Avatar">
