Change button from 'New' to 'Create'
I believe this sounds cleaner and fits better with the other button names

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="user-buttons">
-        <button>New</button>
+        <button>Create</button>
         <button>Upload</button>
         <button>Share</button>
       </div>
