Set correct size for content

--- a/index.html
+++ b/index.html
@@ -52,7 +52,43 @@
       </ul>
     </div>
     <div class="content">
+      <div class="projects-label">Your Projects</div>
+      <div class="projects">
+        <div class="projects-item">
+          <p>Project 1</p>
+          <p>Lorem Ipsum</p>
+        </div>
+        <div class="projects-item">
+          <p>Project 2</p>
+          <p>Lorem Ipsum</p>
+        </div>
+        <div class="projects-item">
+          <p>Project 3</p>
+          <p>Lorem Ipsum</p>
+        </div>
+        <div class="projects-item">
+          <p>Project 4</p>
+          <p>Lorem Ipsum</p>
+        </div>
+        <div class="projects-item">
+          <p>Project 5</p>
+          <p>Lorem Ipsum</p>
+        </div>
+        <div class="projects-item">
+          <p>Project 6</p>
+          <p>Lorem Ipsum</p>
+        </div>
+      </div>
+      <div class="content-side">
+        <div class="announcements-label">Announcements</div>
+        <div class="announcements">
 
+        </div>
+        <div class="trending-label">Trending</div>
+        <div class="trending">
+
+        </div>
+      </div>
     </div>
   </div>
 </body>
