Add styling to projects and hide text overflow

--- a/index.html
+++ b/index.html
@@ -55,28 +55,82 @@
       <div class="projects-label">Your Projects</div>
       <div class="projects">
         <div class="projects-item">
-          <p>Project 1</p>
-          <p>Lorem Ipsum</p>
+          <div class="project-text">
+            <p class="project-name">Project 1</p>
+            <p class="project-description">Lorem ipsum dolor sit amet, consectetur 
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua. Lorem mollis aliquam ut porttitor leo a d 
+                sollicitudin. Senectus et netus et malesuada fames ac.</p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
         </div>
         <div class="projects-item">
-          <p>Project 2</p>
-          <p>Lorem Ipsum</p>
+          <div class="project-text">
+            <p class="project-name">Project 2</p>
+            <p class="project-description">Sollicitudin aliquam ultrices sagittis 
+                orci. Proin nibh nisl condimentum id venenatis a. Egestas diam in arcu cursus.</p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
         </div>
         <div class="projects-item">
-          <p>Project 3</p>
-          <p>Lorem Ipsum</p>
+          <div class="project-text">
+            <p class="project-name">Project 3</p>
+            <p class="project-description">Arcu dictum varius duis at consectetur 
+                lorem donec massa sapien. Maecenas sed enim ut sem viverra aliquet. 
+                Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit. </p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
         </div>
         <div class="projects-item">
-          <p>Project 4</p>
-          <p>Lorem Ipsum</p>
+          <div class="project-text">
+            <p class="project-name">Project 4</p>
+            <p class="project-description">Metus vulputate eu scelerisque felis. 
+                Dignissim enim sit amet venenatis urna cursus eget nunc. Id 
+                faucibus nisl tincidunt eget nullam non nisi.</p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
         </div>
         <div class="projects-item">
-          <p>Project 5</p>
-          <p>Lorem Ipsum</p>
+          <div class="project-text">
+            <p class="project-name">Project 5</p>
+            <p class="project-description">Congue eu consequat ac felis donec et 
+                odio pellentesque diam. Pharetra vel turpis nunc eget lorem dolor 
+                sed. Vitae sapien pellentesque habitant morbi.</p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
         </div>
         <div class="projects-item">
-          <p>Project 6</p>
-          <p>Lorem Ipsum</p>
+          <div class="project-text">
+            <p class="project-name">Project 6</p>
+            <p class="project-description">Sit amet venenatis urna cursus eget. 
+                Nunc mattis enim ut tellus. Adipiscing bibendum est ultricies 
+                integer quis auctor elit.</p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
         </div>
       </div>
       <div class="content-side">
