--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="announcements">
 
         </div>
-        <div class="trending-label">Trending</div>
+        <div class="trending-label">Trending Projects</div>
         <div class="trending">
 
         </div>
