Work on content right-side bar

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="projects">
         <div class="projects-item">
           <div class="project-text">
-            <p class="project-name">Project 1</p>
+            <p class="project-name">The Ultimate App</p>
             <p class="project-description">Lorem ipsum dolor sit amet, consectetur 
                 adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
                 dolore magna aliqua. Lorem mollis aliquam ut porttitor leo a d 
@@ -70,7 +70,7 @@
         </div>
         <div class="projects-item">
           <div class="project-text">
-            <p class="project-name">Project 2</p>
+            <p class="project-name">Super Cool Project</p>
             <p class="project-description">Sollicitudin aliquam ultrices sagittis 
                 orci. Proin nibh nisl condimentum id venenatis a. Egestas diam in arcu cursus.</p>
           </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="projects-item">
           <div class="project-text">
-            <p class="project-name">Project 3</p>
+            <p class="project-name">Slightly Less Cool Project</p>
             <p class="project-description">Arcu dictum varius duis at consectetur 
                 lorem donec massa sapien. Maecenas sed enim ut sem viverra aliquet. 
                 Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit. </p>
@@ -95,7 +95,7 @@
         </div>
         <div class="projects-item">
           <div class="project-text">
-            <p class="project-name">Project 4</p>
+            <p class="project-name">Money Maker</p>
             <p class="project-description">Metus vulputate eu scelerisque felis. 
                 Dignissim enim sit amet venenatis urna cursus eget nunc. Id 
                 faucibus nisl tincidunt eget nullam non nisi.</p>
@@ -108,7 +108,7 @@
         </div>
         <div class="projects-item">
           <div class="project-text">
-            <p class="project-name">Project 5</p>
+            <p class="project-name">Easy App</p>
             <p class="project-description">Congue eu consequat ac felis donec et 
                 odio pellentesque diam. Pharetra vel turpis nunc eget lorem dolor 
                 sed. Vitae sapien pellentesque habitant morbi.</p>
@@ -121,7 +121,7 @@
         </div>
         <div class="projects-item">
           <div class="project-text">
-            <p class="project-name">Project 6</p>
+            <p class="project-name">Impossible App</p>
             <p class="project-description">Sit amet venenatis urna cursus eget. 
                 Nunc mattis enim ut tellus. Adipiscing bibendum est ultricies 
                 integer quis auctor elit.</p>
@@ -132,15 +132,103 @@
             <img src="./imgs/share.svg" alt="Share">
           </div>
         </div>
+        <div class="projects-item">
+          <div class="project-text">
+            <p class="project-name">Secret App</p>
+            <p class="project-description">Lorem ipsum dolor sit amet, consectetur 
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua. Lorem mollis aliquam ut porttitor leo a d 
+                sollicitudin. Senectus et netus et malesuada fames ac.</p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
+        </div>
+        <div class="projects-item">
+          <div class="project-text">
+            <p class="project-name">Long Project</p>
+            <p class="project-description">Sollicitudin aliquam ultrices sagittis 
+                orci. Proin nibh nisl condimentum id venenatis a. Egestas diam in arcu cursus.</p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
+        </div>
+        <div class="projects-item">
+          <div class="project-text">
+            <p class="project-name">Funny App</p>
+            <p class="project-description">Arcu dictum varius duis at consectetur 
+                lorem donec massa sapien. Maecenas sed enim ut sem viverra aliquet. 
+                Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit. </p>
+          </div>
+          <div class="project-icons">
+            <img src="./imgs/star.svg" alt="Favorite">
+            <img src="./imgs/view.svg" alt="View">
+            <img src="./imgs/share.svg" alt="Share">
+          </div>
+        </div>
       </div>
+      <div class="announcements-label">Announcements</div>
       <div class="content-side">
-        <div class="announcements-label">Announcements</div>
         <div class="announcements">
-
+          <div class="announcement-info">
+            <p class="announcement-title">Site Maintenance</p>
+            <p class="announcement-text">Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Vel eros donec ac odio tempor orci dapibus...
+            </p>
+          </div>
+          <hr>
+          <div class="announcement-info">
+            <p class="announcement-title">Community Share Day</p>
+            <p class="announcement-text">In nisl nisi scelerisque eu ultrices.
+                Interdum varius sit amet mattis. Condimentum mattis pellentesque
+                id nibh...
+            </p>
+          </div>
+          <hr>
+          <div class="announcement-info">
+            <p class="announcement-title">Updated Privacy Policy</p>
+            <p class="announcement-text">Leo a diam sollicitudin tempor. Feugiat
+                pretium nibh ipsum consequat. Tristique nulla aliquet enim tortor
+                at auctor urna nunc...
+            </p>
+          </div>
         </div>
         <div class="trending-label">Trending Projects</div>
         <div class="trending">
-
+          <div class="trending-info">
+            <img src="./imgs/avatar2.svg" alt="Profile Avatar">
+            <div class="trending-text">
+              <p class="trending-user-name"></p>
+              <p class="trending-user-project"></p>
+            </div>
+          </div>
+          <div class="trending-info">
+            <img src="./imgs/avatar3.svg" alt="Profile Avatar">
+            <div class="trending-text">
+              <p class="trending-user-name"></p>
+              <p class="trending-user-project"></p>
+            </div>
+          </div>
+          <div class="trending-info">
+            <img src="./imgs/avatar4.svg" alt="Profile Avatar">
+            <div class="trending-text">
+              <p class="trending-user-name"></p>
+              <p class="trending-user-project"></p>
+            </div>
+          </div>
+          <div class="trending-info">
+            <img src="./imgs/avatar5.svg" alt="Profile Avatar">
+            <div class="trending-text">
+              <p class="trending-user-name"></p>
+              <p class="trending-user-project"></p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
