Complete basic webpage styling

--- a/index.html
+++ b/index.html
@@ -202,31 +202,31 @@
         <div class="trending-label">Trending Projects</div>
         <div class="trending">
           <div class="trending-info">
-            <img src="./imgs/avatar2.svg" alt="Profile Avatar">
+            <img src="./imgs/avatar4.svg" alt="Profile Avatar">
             <div class="trending-text">
-              <p class="trending-user-name"></p>
-              <p class="trending-user-project"></p>
+              <p class="trending-user-name">@Michael</p>
+              <p class="trending-user-project">World Peace Builder</p>
             </div>
           </div>
           <div class="trending-info">
             <img src="./imgs/avatar3.svg" alt="Profile Avatar">
             <div class="trending-text">
-              <p class="trending-user-name"></p>
-              <p class="trending-user-project"></p>
-            </div>
-          </div>
-          <div class="trending-info">
-            <img src="./imgs/avatar4.svg" alt="Profile Avatar">
-            <div class="trending-text">
-              <p class="trending-user-name"></p>
-              <p class="trending-user-project"></p>
+              <p class="trending-user-name">@Alyssa</p>
+              <p class="trending-user-project">Life Changing App</p>
             </div>
           </div>
           <div class="trending-info">
             <img src="./imgs/avatar5.svg" alt="Profile Avatar">
             <div class="trending-text">
-              <p class="trending-user-name"></p>
-              <p class="trending-user-project"></p>
+              <p class="trending-user-name">@Ryan</p>
+              <p class="trending-user-project">Get Rich Quick</p>
+            </div>
+          </div>
+          <div class="trending-info">
+            <img src="./imgs/avatar2.svg" alt="Profile Avatar">
+            <div class="trending-text">
+              <p class="trending-user-name">@Sarah</p>
+              <p class="trending-user-project">Traffic Eliminator</p>
             </div>
           </div>
         </div>
