Gather assets and add theme change buttons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <img id="icon-notify" src="./imgs/notification.svg" alt="Notification">
         <img id="icon-avatar" src="./imgs/avatar.svg" alt="Avatar">
         <p>Jevon Fillette</p>
+        <div class="theme">
+          <img id="lightMode" src="./imgs/light-theme.svg" alt="Light Mode">
+          <img id="darkMode" src="./imgs/dark-theme.svg" alt="Dark Mode">
+        </div>
       </div>
       <div class="user-info">
         <img id="user-avatar" src="./imgs/avatar.svg" alt="Avatar">
