Adjust css links in html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
+  <link id="themeSelect" rel="stylesheet" href="./css/dark.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="shortcut icon" href="./imgs/favicon.png" type="image/png">
   <script src="./script.js" defer></script>
@@ -17,12 +18,12 @@
         <input type="search" name="searchbar" id="searchbar">
       </div>
       <div class="profile-icons">
-        <img id="icon-notify" src="./imgs/notification.svg" alt="Notification">
+        <img id="icon-notify" class="profile-icon" src="./imgs/notification.svg" alt="Notification">
         <img id="icon-avatar" src="./imgs/avatar.svg" alt="Avatar">
         <p>Jevon Fillette</p>
         <div class="theme">
-          <img id="lightMode" src="./imgs/light-theme.svg" alt="Light Mode">
-          <img id="darkMode" src="./imgs/dark-theme.svg" alt="Dark Mode">
+          <img id="lightMode" class="profile-icon" src="./imgs/light-theme.svg" alt="Light Mode">
+          <img id="darkMode" class="profile-icon" src="./imgs/dark-theme.svg" alt="Dark Mode">
         </div>
       </div>
       <div class="user-info">
