--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
-  <link id="themeSelect" rel="stylesheet" href="./css/dark.css">
+  <link id="themeSelect" rel="stylesheet" href="./css/light.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="shortcut icon" href="./imgs/favicon.png" type="image/png">
   <script src="./script.js" defer></script>
